# cross-check

./: .gitignore  CITATION.cff  Dockerfile  LICENSE  Makefile  README.md  a2as.yaml  pyproject.toml
.github/workflows/: tests.yml
app/: config.py  events.py  logger.py  main.py  state.py  styles.py
docs/: invalid.mov  rate-limit.mov
engine/: .env.example  __init__.py  agent.py  config.yaml  interface.py  logger.py  schemas.py  utils.py
eval/: test_eval.py
eval/data/: behavioral.evalset.json  legitimate.evalset.json  phishing.evalset.json  test_config.json
tests/: test_agents.py  test_utils.py
